--- a/countrypicker/build.gradle
+++ b/countrypicker/build.gradle
@@ -1,14 +1,12 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
-apply plugin: 'com.github.dcendents.android-maven'
 
-group = 'com.github.mukeshsolanki'
 android {
-    compileSdkVersion 30
+    compileSdkVersion 33
 
     defaultConfig {
         minSdkVersion 21
-        targetSdkVersion 30
+        targetSdkVersion 33
         versionCode 18
         versionName "1.1.2"
     }
@@ -23,9 +21,11 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'com.github.mtotschnig:StickyListHeaders:2.8.0'
+    implementation "androidx.recyclerview:recyclerview:1.3.0-rc01"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'androidx.appcompat:appcompat:1.5.1'
+    implementation 'com.github.myinnos:AlphabetIndex-Fast-Scroll-RecyclerView:1.0.95'
+    implementation "com.github.tougee:sticky-headers-recyclerview:0.7"
 }
 repositories {
     mavenCentral()
