--- a/countrypicker/build.gradle
+++ b/countrypicker/build.gradle
@@ -2,9 +2,8 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 
 android {
-    compileSdkVersion 33
-
     defaultConfig {
+        compileSdk 33
         minSdkVersion 21
         targetSdkVersion 33
         versionCode 22
